# ParallelProg

./: .gitignore  CMakeLists.txt  README.md  allocator.cpp  derivative.cpp  derivative.rb  fifo.c  finaServer.cpp  final  forker.c  matching_polynom.cpp  namedf.c  parser.c  parser_s.c  pointers.cpp  reallocator.c  semaphore.c  semaphore_posix.c  server.h  settings.h  signals.c
libevent_server/: server.c
tcpserver/: client.c  server.c
